--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1095,8 +1095,7 @@ p.date {
 }
 .product-adds {
 	list-style: none;
-	padding: 10px 0 0 0;
-	border-top: 1px solid #edeef0;
+	padding: 0;
 }
 .product-adds a {
 	line-height: 20px;
@@ -1123,11 +1122,10 @@ p.date {
 }
 .product-page-info {
 	margin-bottom: 30px;
-	padding: 0 10px;
 }
 
 .product-page-thumb {
-	width: 350px;
+	width: 300px;
 	margin-right: 30px;
 	position: relative;
 }
@@ -1141,10 +1139,12 @@ p.date {
 	position: absolute;
 	margin: auto;
 }
+
 .product-page-desc {
 	position: relative;
-	width: 580px;
+	width: 630px;
 }
+
 .product-page-thumb, 
 .product-page-desc {
 	display: inline-block;
@@ -1818,7 +1818,7 @@ div.colour{
 		left:0;
 		right:0;
 		margin:auto;
-		bottom:-232px;
+		top:30px;
 		max-width:220px;
 		background:#fff;
 		border:1px solid #ccc;
